# flight_tracker_api

./: LICENSE  a
app/: .env  .env.example  README.txt  auth_service.py  main.py  pyproject.toml  routes.py  schemas.py  service.py
app/routers/: auth.py  flights.py
